--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -37,7 +37,9 @@ ul {
 }
 
 // This may look odd but sets up our utility classes
-* {
+*,
+*::before,
+*::after {
     border-color: var(--border);
     border-style: solid;
     border-width: 0;
